core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/aggregate.yf
---
name: aggregate-self
graphs:
  start:
    - {type: Echo, put: list, value: []}
    - type: AggregateList
      aggregate: "firstelement"
      aggregateList: "{list}"
      put: "list"

    - type: AggregateList
      aggregate: {hello: world}
      aggregateList: "{list}"
      put: "list"

